# RAG-Pipeline

./: README.md  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebooks/: document.ipynb
